# pySpMAC

./: README.md  pyproject.toml
.github/workflows/: deploy_pypi.yml  runtest.yml
sample/multiple/: Gtau.in.0_0  Gtau.in.0_1  Gtau.in.1_0  Gtau.in.1_1  Gtau.in.dos.0_0  Gtau.in.dos.0_1  Gtau.in.dos.1_0  Gtau.in.dos.1_1  input.toml
src/: spmac_main.py
src/spmac/: main.py  matsubara.py  pade.py  util.py
src/spmac/solver/: base.py  multiple.py  pade.py  single.py
tests/: test_multiple.py  test_single.py
